Tests improvements